fix(core/style): update theme variables with latest zeplin export

--- a/packages/core/scss/theme/classic-dark/_variables.scss
+++ b/packages/core/scss/theme/classic-dark/_variables.scss
@@ -6,10 +6,10 @@
 */
 
 $classic-dark: (
-    color-alarm: #dc0031,
+    color-alarm: #fe0137,
     color-critical: #eb780a,
     color-warning: #ffb900,
-    color-success: #339b00,
+    color-success: #40c200,
     color-info: #266ce6,
     color-neutral: #879bab,
     color-1: #10181c,
@@ -231,7 +231,7 @@ $classic-dark: (
     avatar--background: rgba(255, 255, 255, 0.3),
     avatar--color: #fff,
     input--color: rgba(255, 255, 255, 0.85),
-    input--color--disabled: rgba(255, 255, 255, 0.3),
+    input--color--disabled: rgba(255, 255, 255, 0.4),
     input-hint--color: rgba(255, 255, 255, 0.6),
     input--background: #10181c,
     input--border-color: rgba(235, 240, 245, 0.6),
@@ -419,7 +419,7 @@ $classic-dark: (
     animated-tab-icon--color: rgba(255, 255, 255, 0.6),
     animated-tab-icon--color--hover: rgba(255, 255, 255, 0.6),
     animated-tab-icon--color--active: rgba(255, 255, 255, 0.6),
-    animated-tab-icon--color--selected: #000028,
+    animated-tab-icon--color--selected: #000,
     animated-tab-icon--color--disabled: rgba(255, 255, 255, 0.45),
     animated-tab-circle--background: #10181c,
     animated-tab-circle--background--hover: #1e2529,
@@ -526,45 +526,11 @@ $classic-dark: (
     chart-grid-lines: rgba(255, 255, 255, 0.1),
     chart-grid-fill: #10181c,
     chart-axes: rgba(255, 255, 255, 0.3),
-    chart-1: #00ebd5,
-    chart-1-40: rgba(0, 173, 157, 0.4),
-    chart-2-40: rgba(0, 215, 160, 0.4),
-    chart-2: #009e78,
-    chart-3-40: rgba(0, 164, 181, 0.4),
-    chart-3: #00a4b5,
-    chart-4-40: rgba(0, 202, 214, 0.4),
-    chart-4: #00cad6,
-    chart-5-40: rgba(134, 159, 172, 0.4),
-    chart-5: #869fac,
-    chart-6-40: rgba(66, 195, 255, 0.4),
-    chart-6: #42c3ff,
-    chart-7-40: rgba(36, 115, 255, 0.4),
-    chart-7: #2473ff,
-    chart-8-40: rgba(142, 170, 219, 0.4),
-    chart-8: #8eaadb,
-    chart-9-40: rgba(140, 157, 255, 0.4),
-    chart-9: #8c9dff,
-    chart-10-40: rgba(138, 98, 255, 0.4),
-    chart-10: #8a62ff,
-    chart-11-40: rgba(195, 141, 253, 0.4),
-    chart-11: #c38dfd,
-    chart-12-40: rgba(213, 0, 249, 0.4),
-    chart-12: #d500f9,
-    chart-13-40: rgba(243, 143, 194, 0.4),
-    chart-13: #f38fc2,
-    chart-14-40: rgba(239, 154, 154, 0.4),
-    chart-14: #ef9a9a,
-    chart-15-40: rgba(179, 126, 107, 0.4),
-    chart-15: #b37e6b,
-    chart-16-40: rgba(173, 152, 143, 0.4),
-    chart-16-: #ad988f,
-    chart-17-40: rgba(181, 189, 0, 0.4),
-    chart-17: #b5bd00,
     input-unit--color: rgba(255, 255, 255, 0.6),
     input-search-icon--color: rgba(255, 255, 255, 0.85),
     input-search-icon--color--hover: rgba(255, 255, 255, 0.85),
     input-search-icon--color--focus: rgba(255, 255, 255, 0.85),
-    input-search-icon--color--disabled: rgba(255, 255, 255, 0.3),
+    input-search-icon--color--disabled: rgba(255, 255, 255, 0.4),
     input-gripper--color: rgba(235, 240, 245, 0.6),
     color-alarm-text: #ff99af,
     messagebar--background: #10181c,
@@ -595,8 +561,131 @@ $classic-dark: (
     group-item-icon--color: rgba(255, 255, 255, 0.85),
     group-item-text--color: rgba(255, 255, 255, 0.85),
     group-item-subtext--color: rgba(255, 255, 255, 0.6),
-    group-item-icon--color--disabled: rgba(255, 255, 255, 0.3),
-    group-item-text--color--disabled: rgba(255, 255, 255, 0.3),
-    group-item-subtext--color--disabled: rgba(255, 255, 255, 0.3),
+    group-item-icon--color--disabled: rgba(255, 255, 255, 0.4),
+    group-item-text--color--disabled: rgba(255, 255, 255, 0.4),
+    group-item-subtext--color--disabled: rgba(255, 255, 255, 0.4),
+    upload--background: #10181c,
+    upload--background--dragover: #10181c,
+    upload--background--checking: #10181c,
+    upload--background--disabled: #10181c,
+    upload--border-color: rgba(235, 240, 245, 0.4),
+    upload--border-color--dragover: #41aaaa,
+    upload--border-color--checking: rgba(235, 240, 245, 0.4),
+    upload--border-color--disabled: rgba(235, 240, 245, 0.4),
+    upload-text--color: rgba(255, 255, 255, 0.85),
+    upload-text--color--checking: rgba(255, 255, 255, 0.85),
+    upload-text--color--disabled: rgba(235, 240, 245, 0.3),
+    event-item--background: rgba(16, 24, 28, 0.2),
+    event-item--background--hover: #20282c,
+    event-item--background--active: #31383c,
+    event-item--background--selected: #152c2f,
+    event-item--background--disabled: rgba(16, 24, 28, 0.6),
+    event-item--border: rgba(235, 240, 245, 0.15),
+    event-item--border--hover: rgba(235, 240, 245, 0.15),
+    event-item--border--active: rgba(235, 240, 245, 0.15),
+    event-item--border--selected: #3fa8a8,
+    event-item--border--disabled: rgba(235, 240, 245, 0.15),
+    event-item-chevron--color: rgba(255, 255, 255, 0.6),
+    flip--color: rgba(255, 255, 255, 0.85),
+    flip--background: #10181c,
+    flip-footer--color: rgba(255, 255, 255, 0.85),
+    flip-footer--background: #10181c,
+    flip--border-color: rgba(235, 240, 245, 0.6),
+    kpi-display--background: rgba(255, 255, 255, 0),
+    kpi-display--background--hover: rgba(255, 255, 255, 0.07),
+    kpi-display--background--active: rgba(255, 255, 255, 0.14),
+    kpi-display-indicator--background: rgba(255, 255, 255, 0.3),
+    kpi-display-label--color: rgba(255, 255, 255, 0.6),
+    kpi-display-icon--color: rgba(255, 255, 255, 0.85),
+    kpi-display-value--color: rgba(255, 255, 255, 0.85),
+    kpi-display-units--color: rgba(255, 255, 255, 0.6),
+    scrollbar-track--background: #172126,
+    scrollbar-track--background--hover: #273135,
+    scrollbar-track--border: #10181c,
+    scrollbar-thumb--background: #555f69,
+    scrollbar-thumb--background--hover: #616a74,
+    input-extra--background--active: #232323,
+    input-extra--background--hover: #121212,
+    input-select-icon--color--active: rgba(255, 255, 255, 0.85),
+    select-list-item-hint--color: rgba(255, 255, 255, 0.6),
+    select-list-item-hint--color--hover: rgba(255, 255, 255, 0.6),
+    select-list-item-hint--color--active: rgba(255, 255, 255, 0.6),
+    datepicker-day--background: rgba(255, 255, 255, 0),
+    datepicker-day--background--hover: rgba(255, 255, 255, 0.07),
+    datepicker-day--background--active: rgba(255, 255, 255, 0.14),
+    datepicker-day--background--disabled: rgba(0, 0, 0, 0),
+    datepicker-day--border-color: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--hover: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--active: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--disabled: rgba(0, 0, 0, 0),
+    datepicker-day--color: #41aaaa,
+    datepicker-day--color--hover: #41aaaa,
+    datepicker-day--color--active: #41aaaa,
+    datepicker-day--color--disabled: rgba(255, 255, 255, 0.4),
+    datepicker-day--background--selected: #00d4d4,
+    datepicker-day--background--selected-hover: #12d7d7,
+    datepicker-day--background--selected-active: #24dada,
+    datepicker-day--background--selected-disabled: rgba(0, 212, 212, 0.3),
+    datepicker-day--border-color--selected: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--selected-hover: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--selected-active: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--selected-disabled: rgba(0, 0, 0, 0),
+    datepicker-day--color--selected: #000,
+    datepicker-day--color--selected-hover: #000,
+    datepicker-day--color--selected-active: #000,
+    datepicker-day--color--selected-disabled: rgba(255, 255, 255, 0.4),
+    datepicker-day--background--range: #41aaaa,
+    datepicker-day--background--range-hover: #4eb0b0,
+    datepicker-day--background--range-active: #5cb6b6,
+    datepicker-day--background--range-disabled: rgba(65, 170, 170, 0.2),
+    datepicker-day--border-color--range: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--range-hover: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--range-active: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--range-disabled: rgba(0, 0, 0, 0),
+    datepicker-day--color--range: #000,
+    datepicker-day--color--range-hover: #000,
+    datepicker-day--color--range-active: #000,
+    datepicker-day--color--range-disabled: rgba(255, 255, 255, 0.4),
+    datepicker-today--background: rgba(255, 255, 255, 0),
+    datepicker-today--background--hover: rgba(255, 255, 255, 0.07),
+    datepicker-today--background--active: rgba(255, 255, 255, 0.14),
+    datepicker-today--background--disabled: rgba(0, 0, 0, 0),
+    datepicker-today--border-color: #41aaaa,
+    datepicker-today--border-color--hover: #41aaaa,
+    datepicker-today--border-color--active: #41aaaa,
+    datepicker-today--border-color--disabled: rgba(65, 170, 170, 0.45),
+    datepicker-today--color: #41aaaa,
+    datepicker-today--color--hover: #41aaaa,
+    datepicker-today--color--active: #41aaaa,
+    datepicker-today--color--disabled: rgba(255, 255, 255, 0.4),
+    datepicker-today--background--selected: #00d4d4,
+    datepicker-today--background--selected-hover: #12d7d7,
+    datepicker-today--background--selected-active: #24dada,
+    datepicker-today--background--selected-disabled: rgba(0, 212, 212, 0.3),
+    datepicker-today--border-color--selected: #41aaaa,
+    datepicker-today--border-color--selected-hover: #41aaaa,
+    datepicker-today--border-color--selected-active: #41aaaa,
+    datepicker-today--border-color--selected-disabled: rgba(65, 170, 170, 0.6),
+    datepicker-today--color--selected: #000,
+    datepicker-today--color--selected-hover: #000,
+    datepicker-today--color--selected-active: #000,
+    datepicker-today--color--selected-disabled: rgba(255, 255, 255, 0.4),
+    datepicker-today--background--range: #41aaaa,
+    datepicker-today--background--range-hover: #4eb0b0,
+    datepicker-today--background--range-active: #5cb6b6,
+    datepicker-today--background--range-disabled: rgba(65, 170, 170, 0.2),
+    datepicker-today--border-color--range: #41aaaa,
+    datepicker-today--border-color--range-hover: #0e777c,
+    datepicker-today--border-color--range-active: #41aaaa,
+    datepicker-today--border-color--range-disabled: rgba(65, 170, 170, 0.6),
+    datepicker-today--color--range: #000,
+    datepicker-today--color--range-hover: #000,
+    datepicker-today--color--range-active: #000,
+    datepicker-today--color--range-disabled: rgba(255, 255, 255, 0.4),
+    datepicker-extra--border-color: #10181c,
+    datepicker-weekday--color: rgba(255, 255, 255, 0.6),
+    datepicker-time-header--color: rgba(255, 255, 255, 0.85),
+    datepicker-cw--color: rgba(255, 255, 255, 0.6),
+    datepicker-separator--background: rgba(235, 240, 245, 0.15),
 
 );
