--- a/packages/core/scss/theme/classic-light/_variables.scss
+++ b/packages/core/scss/theme/classic-light/_variables.scss
@@ -9,16 +9,14 @@ $classic-light: (
     color-primary: #0e777c,
     color-alarm: #dc0031,
     color-critical: #eb780a,
-    color-warning: #ffb900,
+    color-warning: #f0b800,
     color-success: #339b00,
     color-info: #1e54b3,
     color-neutral: #879bab,
     color-6: #becdd7,
     color-5: #ced9e2,
-    color-4: #dfe6ed,
     color-3: #ebf0f5,
     color-2: #f5f8fa,
-    color-1: #fff,
     color-disabled-btn: rgba(23, 33, 38, 0.25),
     color-std-bdr: rgba(65, 95, 117, 0.6),
     color-soft-bdr: rgba(65, 95, 117, 0.4),
@@ -234,7 +232,6 @@ $classic-light: (
     input--color--disabled: rgba(0, 0, 0, 0.3),
     input--background: #fff,
     input--border-color: rgba(65, 95, 117, 0.6),
-    input-hint--color: rgba(0, 0, 0, 0.6),
     input--background--hover: #fff,
     input--border-color--hover: rgba(65, 95, 117, 0.6),
     input--background--focus: #fff,
@@ -421,7 +418,7 @@ $classic-light: (
     animated-tab-icon--color--hover: rgba(0, 0, 0, 0.6),
     animated-tab-icon--color--active: rgba(0, 0, 0, 0.6),
     animated-tab-icon--color--selected: #fff,
-    animated-tab-icon--color--disabled: rgba(0, 0, 40, 0.3),
+    animated-tab-icon--color--disabled: rgba(0, 0, 0, 0.3),
     animated-tab-circle--background: #fff,
     animated-tab-circle--background--hover: #f2f2f2,
     animated-tab-circle--background--active: #e5e5e5,
@@ -530,40 +527,6 @@ $classic-light: (
     chart-axes: rgba(0, 0, 0, 0.3),
     chart-grid-fill: #fff,
     chart-ticks: rgba(0, 0, 0, 0.3),
-    chart-1: #00b8a6,
-    chart-2: #007362,
-    chart-2-40: rgba(0, 115, 98, 0.4),
-    chart-3: #0091a3,
-    chart-3-40: rgba(0, 145, 163, 0.4),
-    chart-4: #009fa8,
-    chart-4-40: rgba(0, 159, 168, 0.4),
-    chart-5: #617d8c,
-    chart-5-40: rgba(97, 125, 140, 0.4),
-    chart-6: #0095d9,
-    chart-6-40: rgba(0, 149, 217, 0.4),
-    chart-7: #2351a4,
-    chart-7-40: rgba(36, 115, 255, 0.4),
-    chart-8: #6082bd,
-    chart-8-40: rgba(96, 130, 189, 0.4),
-    chart-9: #7584df,
-    chart-9-40: rgba(117, 132, 223, 0.4),
-    chart-10: #7c40ff,
-    chart-10-40: rgba(124, 64, 255, 0.4),
-    chart-11: #9370df,
-    chart-11-40: rgba(147, 112, 223, 0.4),
-    chart-12: #c300e6,
-    chart-12-40: rgba(195, 0, 230, 0.4),
-    chart-13: #ca5e77,
-    chart-13-40: rgba(202, 94, 119, 0.4),
-    chart-14: #d1706f,
-    chart-14-40: rgba(209, 112, 111, 0.4),
-    chart-15: #9e6f5e,
-    chart-15-40: rgba(158, 111, 94, 0.4),
-    chart-16: #a0887e,
-    chart-16-40: rgba(160, 136, 126, 0.4),
-    chart-17: #909700,
-    chart-17-40: rgba(144, 151, 0, 0.4),
-    chart-1-40: rgba(0, 133, 120, 0.4),
     input-unit--color: rgba(0, 0, 0, 0.6),
     input-search-icon--color: rgba(0, 0, 0, 0.75),
     input-search-icon--color--hover: rgba(0, 0, 0, 0.75),
@@ -602,5 +565,130 @@ $classic-light: (
     group-item-icon--color--disabled: rgba(0, 0, 0, 0.3),
     group-item-text--color--disabled: rgba(0, 0, 0, 0.3),
     group-item-subtext--color--disabled: rgba(0, 0, 0, 0.3),
+    upload--background: #fff,
+    upload--background--dragover: #fff,
+    upload--background--checking: #fff,
+    upload--background--disabled: #fff,
+    upload--border-color: rgba(65, 95, 117, 0.4),
+    upload--border-color--dragover: #0e777c,
+    upload--border-color--checking: rgba(65, 95, 117, 0.4),
+    upload--border-color--disabled: rgba(65, 95, 117, 0.4),
+    upload-text--color: rgba(0, 0, 0, 0.75),
+    upload-text--color--checking: rgba(0, 0, 0, 0.75),
+    upload-text--color--disabled: rgba(0, 0, 40, 0.3),
+    event-item--background: #fff,
+    event-item--background--hover: #f2f2f2,
+    event-item--background--active: #e5e5e5,
+    event-item--background--selected: #e1f1f1,
+    event-item--background--disabled: rgba(255, 255, 255, 0.6),
+    event-item--border: rgba(23, 33, 38, 0.15),
+    event-item--border--hover: rgba(23, 33, 38, 0.15),
+    event-item--border--active: rgba(23, 33, 38, 0.15),
+    event-item--border--selected: #137d81,
+    event-item-chevron--color: rgba(0, 0, 0, 0.6),
+    event-item--border--disabled: rgba(0, 0, 0, 0.15),
+    flip--color: rgba(0, 0, 0, 0.75),
+    flip--background: #fff,
+    flip-footer--color: rgba(0, 0, 0, 0.75),
+    flip-footer--background: #fff,
+    flip--border-color: rgba(65, 95, 117, 0.6),
+    kpi-display--background: rgba(0, 0, 0, 0),
+    kpi-display--background--hover: rgba(0, 0, 0, 0.05),
+    kpi-display--background--active: rgba(0, 0, 0, 0.1),
+    kpi-display-indicator--background: rgba(0, 0, 0, 0.3),
+    kpi-display-label--color: rgba(0, 0, 0, 0.6),
+    kpi-display-icon--color: rgba(0, 0, 0, 0.75),
+    kpi-display-value--color: rgba(0, 0, 0, 0.75),
+    kpi-display-units--color: rgba(0, 0, 0, 0.6),
+    scrollbar-track--background: #f5f8fa,
+    scrollbar-track--background--hover: #e9ecee,
+    scrollbar-track--border: #fff,
+    scrollbar-thumb--background: #ced9e2,
+    scrollbar-thumb--background--hover: #c4ced7,
+    input-extra--background--hover: #f2f2f2,
+    input-extra--background--active: #e6e6e6,
+    input-select-icon--color--hover: rgba(255, 255, 255, 0.85),
+    input-select-icon--color--active: rgba(0, 0, 0, 0.75),
+    select-list-item-hint--color: rgba(0, 0, 0, 0.55),
+    select-list-item-hint--color--hover: rgba(0, 0, 0, 0.55),
+    select-list-item-hint--color--active: rgba(0, 0, 0, 0.55),
+    datepicker-day--background: rgba(255, 255, 255, 0),
+    datepicker-day--background--hover: rgba(0, 0, 0, 0.05),
+    datepicker-day--background--active: rgba(0, 0, 0, 0.1),
+    datepicker-day--background--disabled: rgba(255, 255, 255, 0),
+    datepicker-day--border-color: rgba(0, 0, 0, 0),
+    datepicker-day--border-color--hover: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--active: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--disabled: rgba(255, 255, 255, 0),
+    datepicker-day--color: #0e777c,
+    datepicker-day--color--hover: #0e777c,
+    datepicker-day--color--active: #0e777c,
+    datepicker-day--color--disabled: rgba(0, 0, 0, 0.3),
+    datepicker-day--background--selected: #0b6165,
+    datepicker-day--background--selected-hover: #0a5c60,
+    datepicker-day--background--selected-active: #0a575b,
+    datepicker-day--background--selected-disabled: rgba(11, 97, 101, 0.3),
+    datepicker-day--border-color--selected: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--selected-hover: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--selected-active: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--selected-disabled: rgba(255, 255, 255, 0),
+    datepicker-day--color--selected: #fff,
+    datepicker-day--color--selected-hover: #fff,
+    datepicker-day--color--selected-active: #fff,
+    datepicker-day--color--selected-disabled: rgba(0, 0, 0, 0.3),
+    datepicker-day--background--range: #377d81,
+    datepicker-day--background--range-hover: #34777b,
+    datepicker-day--background--range-active: #327174,
+    datepicker-day--background--range-disabled: rgba(50, 113, 116, 0.2),
+    datepicker-day--border-color--range: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--range-hover: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--range-active: rgba(255, 255, 255, 0),
+    datepicker-day--border-color--range-disabled: rgba(255, 255, 255, 0),
+    datepicker-day--color--range: #fff,
+    datepicker-day--color--range-hover: #fff,
+    datepicker-day--color--range-active: #fff,
+    datepicker-day--color--range-disabled: rgba(0, 0, 0, 0.3),
+    datepicker-today--background: rgba(255, 255, 255, 0),
+    datepicker-today--background--hover: rgba(0, 0, 0, 0.05),
+    datepicker-today--background--active: rgba(0, 0, 0, 0.1),
+    datepicker-today--background--disabled: rgba(255, 255, 255, 0),
+    datepicker-today--border-color: #0e777c,
+    datepicker-today--border-color--hover: #0e777c,
+    datepicker-today--border-color--active: #0e777c,
+    datepicker-today--border-color--disabled: rgba(14, 119, 124, 0.3),
+    datepicker-today--color: #0e777c,
+    datepicker-today--color--hover: #0e777c,
+    datepicker-today--color--active: #0e777c,
+    datepicker-today--color--disabled: rgba(0, 0, 0, 0.3),
+    datepicker-today--background--selected: #0b6165,
+    datepicker-today--background--selected-hover: #0a5c60,
+    datepicker-today--background--selected-active: #0a575b,
+    datepicker-today--background--selected-disabled: rgba(11, 97, 101, 0.3),
+    datepicker-today--border-color--selected: #0e777c,
+    datepicker-today--border-color--selected-hover: #0e777c,
+    datepicker-today--border-color--selected-active: #0e777c,
+    datepicker-today--border-color--selected-disabled: rgba(14, 119, 124, 0.3),
+    datepicker-today--color--selected: #fff,
+    datepicker-today--color--selected-hover: #fff,
+    datepicker-today--color--selected-active: #fff,
+    datepicker-today--color--selected-disabled: rgba(0, 0, 0, 0.3),
+    datepicker-today--background--range: #377d81,
+    datepicker-today--background--range-hover: #34777b,
+    datepicker-today--background--range-active: #327174,
+    datepicker-today--background--range-disabled: rgba(50, 113, 116, 0.2),
+    datepicker-today--border-color--range: #0e777c,
+    datepicker-today--border-color--range-active: #0e777c,
+    datepicker-today--border-color--range-disabled: rgba(0, 121, 147, 0.3),
+    datepicker-today--color--range: #fff,
+    datepicker-today--color--range-hover: #fff,
+    datepicker-today--color--range-active: #fff,
+    datepicker-today--color--range-disabled: rgba(0, 0, 0, 0.3),
+    datepicker-extra--border-color: #fff,
+    datepicker-weekday--color: rgba(0, 0, 0, 0.6),
+    datepicker-time-header--color: rgba(0, 0, 0, 0.75),
+    datepicker-cw--color: rgba(0, 0, 0, 0.55),
+    datepicker-separator--background: rgba(23, 33, 38, 0.15),
+    color-1: #fff,
+    input-hint--color: rgba(0, 0, 0, 0.6),
 
 );
