--- a/packages/core/scss/theme/_define-theme.scss
+++ b/packages/core/scss/theme/_define-theme.scss
@@ -3,7 +3,7 @@
  */
 
 @import './define-theme-variable';
-@import './shadows';
+@import './../components/shadows';
 
 @mixin define-theme(
   $name,
